Remove unused api endpoints and schema definitions
